buildspec.yml modify - s3 bucket upload

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,4 +24,4 @@ artifacts:
     - build/libs/*.jar
   discard-paths: yes
   bucket-name: 'ifn-longvacation-bucket' # 내가 생성한 bucket 이름
-  path: 'build-artifacts'
+  path: 'build-artifacts/'
