--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,18 @@ dependencies {
     // jdbc datasource
     implementation 'org.springframework.boot:spring-boot-starter-jdbc:3.1.4'
     implementation 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    // resilience circuit breaker
+    implementation 'io.github.resilience4j:resilience4j-spring-boot2:1.7.1'
 
 }
+
+
+
+
+
 
 tasks.named('test') {
     useJUnitPlatform()
